@@ -48,7 +48,7 @@
     <lwjgl3.version>3.0.0</lwjgl3.version>
     <lwjgl3.platformVersion>3.0.0</lwjgl3.platformVersion>
     <jglfw.version>1.1</jglfw.version>
-    <robovm.version>2.1.0</robovm.version>
+    <robovm.version>2.2.0</robovm.version>
     <moe.version>1.0.0</moe.version>
   </properties>
 
